--- a/test6/ui/files/index/styles.css
+++ b/test6/ui/files/index/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1073px;
+  width:1090px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u24_div {
+#u28_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u24 {
+#u28 {
   border-width:0px;
   position:absolute;
   left:45px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u25 {
+#u29 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u26_img {
+#u30_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u26 {
+#u30 {
   border-width:0px;
   position:absolute;
   left:45px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u27 {
+#u31 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u28 {
+#u32 {
   border-width:0px;
   position:absolute;
   left:132px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u28_input {
+#u32_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u29 {
+#u33 {
   border-width:0px;
   position:absolute;
   left:45px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u29_menu {
+#u33_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u30 {
+#u34 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u31_img {
+#u35_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u31 {
+#u35 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,59 +141,11 @@
   font-style:normal;
   color:#000000;
 }
-#u32 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:6px;
-  width:83px;
-  word-wrap:break-word;
-}
-#u33_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:87px;
-  height:34px;
-}
-#u33 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:28px;
-  width:87px;
-  height:34px;
-}
-#u34 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:10px;
-  width:83px;
-  word-wrap:break-word;
-}
-#u35_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:87px;
-  height:36px;
-}
-#u35 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:62px;
-  width:87px;
-  height:36px;
-}
 #u36 {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:10px;
+  top:6px;
   width:83px;
   word-wrap:break-word;
 }
@@ -203,21 +155,21 @@
   left:0px;
   top:0px;
   width:87px;
-  height:30px;
+  height:34px;
 }
 #u37 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:98px;
+  top:28px;
   width:87px;
-  height:30px;
+  height:34px;
 }
 #u38 {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:8px;
+  top:10px;
   width:83px;
   word-wrap:break-word;
 }
@@ -227,21 +179,21 @@
   left:0px;
   top:0px;
   width:87px;
-  height:32px;
+  height:36px;
 }
 #u39 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:128px;
+  top:62px;
   width:87px;
-  height:32px;
+  height:36px;
 }
 #u40 {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:8px;
+  top:10px;
   width:83px;
   word-wrap:break-word;
 }
@@ -251,15 +203,15 @@
   left:0px;
   top:0px;
   width:87px;
-  height:32px;
+  height:30px;
 }
 #u41 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:160px;
+  top:98px;
   width:87px;
-  height:32px;
+  height:30px;
 }
 #u42 {
   border-width:0px;
@@ -272,12 +224,60 @@
 #u43_img {
   border-width:0px;
   position:absolute;
+  left:0px;
+  top:0px;
+  width:87px;
+  height:32px;
+}
+#u43 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:128px;
+  width:87px;
+  height:32px;
+}
+#u44 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:83px;
+  word-wrap:break-word;
+}
+#u45_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:87px;
+  height:32px;
+}
+#u45 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:160px;
+  width:87px;
+  height:32px;
+}
+#u46 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:83px;
+  word-wrap:break-word;
+}
+#u47_img {
+  border-width:0px;
+  position:absolute;
   left:-4px;
   top:-4px;
   width:40px;
   height:50px;
 }
-#u43 {
+#u47 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u44 {
+#u48 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u45_div {
+#u49_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -312,7 +312,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u45 {
+#u49 {
   border-width:0px;
   position:absolute;
   left:370px;
@@ -323,7 +323,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u46 {
+#u50 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -331,83 +331,13 @@
   width:129px;
   white-space:nowrap;
 }
-#u47_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:229px;
-  height:27px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-size:16px;
-  color:#003300;
-}
-#u47 {
-  border-width:0px;
-  position:absolute;
-  left:844px;
-  top:67px;
-  width:229px;
-  height:27px;
-  font-size:16px;
-  color:#003300;
-}
-#u48 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:229px;
-  word-wrap:break-word;
-}
-#u49_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:114px;
-  height:27px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-size:16px;
-  color:#003300;
-}
-#u49 {
-  border-width:0px;
-  position:absolute;
-  left:861px;
-  top:26px;
-  width:114px;
-  height:27px;
-  font-size:16px;
-  color:#003300;
-}
-#u50 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:114px;
-  word-wrap:break-word;
-}
 #u51_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:138px;
-  height:26px;
+  width:229px;
+  height:27px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -415,25 +345,25 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:18px;
-  color:#003300;
+  font-size:16px;
+  color:#00CC00;
 }
 #u51 {
   border-width:0px;
   position:absolute;
-  left:150px;
-  top:80px;
-  width:138px;
-  height:26px;
-  font-size:18px;
-  color:#003300;
+  left:861px;
+  top:63px;
+  width:229px;
+  height:27px;
+  font-size:16px;
+  color:#00CC00;
 }
 #u52 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:138px;
+  width:229px;
   word-wrap:break-word;
 }
 #u53_div {
@@ -441,8 +371,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:138px;
-  height:26px;
+  width:114px;
+  height:27px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -450,25 +380,25 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:18px;
-  color:#003300;
+  font-size:16px;
+  color:#00CC00;
 }
 #u53 {
   border-width:0px;
   position:absolute;
-  left:370px;
-  top:279px;
-  width:138px;
-  height:26px;
-  font-size:18px;
-  color:#003300;
+  left:869px;
+  top:26px;
+  width:114px;
+  height:27px;
+  font-size:16px;
+  color:#00CC00;
 }
 #u54 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:138px;
+  width:114px;
   word-wrap:break-word;
 }
 #u55_div {
@@ -476,6 +406,76 @@
   position:absolute;
   left:0px;
   top:0px;
+  width:138px;
+  height:26px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:18px;
+  color:#00CC00;
+}
+#u55 {
+  border-width:0px;
+  position:absolute;
+  left:150px;
+  top:80px;
+  width:138px;
+  height:26px;
+  font-size:18px;
+  color:#00CC00;
+}
+#u56 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u57_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:138px;
+  height:26px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:18px;
+  color:#00CC00;
+}
+#u57 {
+  border-width:0px;
+  position:absolute;
+  left:370px;
+  top:279px;
+  width:138px;
+  height:26px;
+  font-size:18px;
+  color:#00CC00;
+}
+#u58 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u59_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
   width:221px;
   height:37px;
   background:inherit;
@@ -486,9 +486,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:28px;
-  color:#003300;
+  color:#00CC00;
 }
-#u55 {
+#u59 {
   border-width:0px;
   position:absolute;
   left:376px;
@@ -496,68 +496,15 @@
   width:221px;
   height:37px;
   font-size:28px;
-  color:#003300;
+  color:#00CC00;
 }
-#u56 {
+#u60 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:221px;
   word-wrap:break-word;
-}
-#u57 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:105px;
-  height:35px;
-}
-#u58_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:30px;
-}
-#u58 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:30px;
-}
-#u59 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:7px;
-  width:96px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u60 {
-  border-width:0px;
-  position:absolute;
-  left:744px;
-  top:28px;
-  width:100px;
-  height:30px;
-}
-#u60_menu {
-  border-width:0px;
-  position:absolute;
-  left:-3px;
-  top:-3px;
-  width:106px;
-  height:36px;
-  -webkit-transform:rotate(NaNdeg);
-  -moz-transform:rotate(NaNdeg);
-  -ms-transform:rotate(NaNdeg);
-  transform:rotate(NaNdeg);
 }
 #u61 {
   border-width:0px;
@@ -587,18 +534,18 @@
   border-width:0px;
   position:absolute;
   left:2px;
-  top:8px;
+  top:7px;
   width:96px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 #u64 {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:30px;
+  left:744px;
+  top:28px;
   width:100px;
-  height:60px;
-  visibility:hidden;
+  height:30px;
 }
 #u64_menu {
   border-width:0px;
@@ -606,7 +553,7 @@
   left:-3px;
   top:-3px;
   width:106px;
-  height:66px;
+  height:36px;
   -webkit-transform:rotate(NaNdeg);
   -moz-transform:rotate(NaNdeg);
   -ms-transform:rotate(NaNdeg);
@@ -618,7 +565,7 @@
   left:0px;
   top:0px;
   width:105px;
-  height:65px;
+  height:35px;
 }
 #u66_img {
   border-width:0px;
@@ -644,7 +591,36 @@
   width:96px;
   word-wrap:break-word;
 }
-#u68_img {
+#u68 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:30px;
+  width:100px;
+  height:60px;
+  visibility:hidden;
+}
+#u68_menu {
+  border-width:0px;
+  position:absolute;
+  left:-3px;
+  top:-3px;
+  width:106px;
+  height:66px;
+  -webkit-transform:rotate(NaNdeg);
+  -moz-transform:rotate(NaNdeg);
+  -ms-transform:rotate(NaNdeg);
+  transform:rotate(NaNdeg);
+}
+#u69 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:105px;
+  height:65px;
+}
+#u70_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -652,15 +628,15 @@
   width:100px;
   height:30px;
 }
-#u68 {
+#u70 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:30px;
+  top:0px;
   width:100px;
   height:30px;
 }
-#u69 {
+#u71 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -668,7 +644,31 @@
   width:96px;
   word-wrap:break-word;
 }
-#u70_div {
+#u72_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:30px;
+}
+#u72 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:30px;
+  width:100px;
+  height:30px;
+}
+#u73 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:96px;
+  word-wrap:break-word;
+}
+#u74_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -683,9 +683,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:18px;
-  color:#003300;
+  color:#00CC00;
 }
-#u70 {
+#u74 {
   border-width:0px;
   position:absolute;
   left:150px;
@@ -693,9 +693,9 @@
   width:138px;
   height:26px;
   font-size:18px;
-  color:#003300;
+  color:#00CC00;
 }
-#u71 {
+#u75 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -703,7 +703,7 @@
   width:138px;
   word-wrap:break-word;
 }
-#u72_img {
+#u76_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -711,7 +711,7 @@
   width:207px;
   height:2px;
 }
-#u72 {
+#u76 {
   border-width:0px;
   position:absolute;
   left:170px;
@@ -719,12 +719,130 @@
   width:206px;
   height:1px;
 }
-#u73 {
+#u77 {
   border-width:0px;
   position:absolute;
   left:2px;
   top:-8px;
   width:202px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u78_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:28px;
+  background:inherit;
+  background-color:rgba(25, 158, 216, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#000000;
+}
+#u78 {
+  border-width:0px;
+  position:absolute;
+  left:35px;
+  top:451px;
+  width:70px;
+  height:28px;
+  color:#000000;
+}
+#u79 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:66px;
+  word-wrap:break-word;
+}
+#u80_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:156px;
+  height:31px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:18px;
+  color:#00CC00;
+}
+#u80 {
+  border-width:0px;
+  position:absolute;
+  left:94px;
+  top:489px;
+  width:156px;
+  height:31px;
+  font-size:18px;
+  color:#00CC00;
+}
+#u81 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:156px;
+  word-wrap:break-word;
+}
+#u82_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:88px;
+  height:2px;
+}
+#u82 {
+  border-width:0px;
+  position:absolute;
+  left:27px;
+  top:509px;
+  width:87px;
+  height:1px;
+}
+#u83 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:83px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u84_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:159px;
+  height:2px;
+}
+#u84 {
+  border-width:0px;
+  position:absolute;
+  left:854px;
+  top:90px;
+  width:158px;
+  height:1px;
+}
+#u85 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:154px;
   visibility:hidden;
   word-wrap:break-word;
 }
