--- a/test6/ui/files/个人信息/styles.css
+++ b/test6/ui/files/个人信息/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u389_div {
+#u438_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u389 {
+#u438 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u390 {
+#u439 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u391_img {
+#u440_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u391 {
+#u440 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u392 {
+#u441 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u393 {
+#u442 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u393_input {
+#u442_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u394 {
+#u443 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u394_menu {
+#u443_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u395 {
+#u444 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u396_img {
+#u445_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u396 {
+#u445 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u397 {
+#u446 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u398_img {
+#u447_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u398 {
+#u447 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u399 {
+#u448 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u400_img {
+#u449_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u400 {
+#u449 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u401 {
+#u450 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u402_img {
+#u451_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u402 {
+#u451 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u403 {
+#u452 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u404_img {
+#u453_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u404 {
+#u453 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u405 {
+#u454 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u406_img {
+#u455_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u406 {
+#u455 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u407 {
+#u456 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u408_img {
+#u457_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u408 {
+#u457 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u409 {
+#u458 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u410_div {
+#u459_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u410 {
+#u459 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u411 {
+#u460 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u412 {
+#u461 {
   border-width:0px;
   position:absolute;
   left:314px;
@@ -334,7 +334,7 @@
   width:270px;
   height:212px;
 }
-#u413_img {
+#u462_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -342,7 +342,7 @@
   width:133px;
   height:43px;
 }
-#u413 {
+#u462 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -350,7 +350,7 @@
   width:133px;
   height:43px;
 }
-#u414 {
+#u463 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -358,7 +358,7 @@
   width:129px;
   word-wrap:break-word;
 }
-#u415_img {
+#u464_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -366,7 +366,7 @@
   width:132px;
   height:43px;
 }
-#u415 {
+#u464 {
   border-width:0px;
   position:absolute;
   left:133px;
@@ -374,7 +374,7 @@
   width:132px;
   height:43px;
 }
-#u416 {
+#u465 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -382,7 +382,7 @@
   width:128px;
   word-wrap:break-word;
 }
-#u417_img {
+#u466_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -390,7 +390,7 @@
   width:133px;
   height:43px;
 }
-#u417 {
+#u466 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -398,7 +398,7 @@
   width:133px;
   height:43px;
 }
-#u418 {
+#u467 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -406,7 +406,7 @@
   width:129px;
   word-wrap:break-word;
 }
-#u419_img {
+#u468_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -414,7 +414,7 @@
   width:132px;
   height:43px;
 }
-#u419 {
+#u468 {
   border-width:0px;
   position:absolute;
   left:133px;
@@ -422,7 +422,7 @@
   width:132px;
   height:43px;
 }
-#u420 {
+#u469 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -430,7 +430,7 @@
   width:128px;
   word-wrap:break-word;
 }
-#u421_img {
+#u470_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -438,7 +438,7 @@
   width:133px;
   height:43px;
 }
-#u421 {
+#u470 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -446,7 +446,7 @@
   width:133px;
   height:43px;
 }
-#u422 {
+#u471 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -454,7 +454,7 @@
   width:129px;
   word-wrap:break-word;
 }
-#u423_img {
+#u472_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -462,7 +462,7 @@
   width:132px;
   height:43px;
 }
-#u423 {
+#u472 {
   border-width:0px;
   position:absolute;
   left:133px;
@@ -470,7 +470,7 @@
   width:132px;
   height:43px;
 }
-#u424 {
+#u473 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -478,7 +478,7 @@
   width:128px;
   word-wrap:break-word;
 }
-#u425_img {
+#u474_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -486,7 +486,7 @@
   width:133px;
   height:43px;
 }
-#u425 {
+#u474 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -494,7 +494,7 @@
   width:133px;
   height:43px;
 }
-#u426 {
+#u475 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -502,7 +502,7 @@
   width:129px;
   word-wrap:break-word;
 }
-#u427_img {
+#u476_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -510,7 +510,7 @@
   width:132px;
   height:43px;
 }
-#u427 {
+#u476 {
   border-width:0px;
   position:absolute;
   left:133px;
@@ -518,7 +518,7 @@
   width:132px;
   height:43px;
 }
-#u428 {
+#u477 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -526,7 +526,7 @@
   width:128px;
   word-wrap:break-word;
 }
-#u429_img {
+#u478_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -534,7 +534,7 @@
   width:133px;
   height:35px;
 }
-#u429 {
+#u478 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -542,7 +542,7 @@
   width:133px;
   height:35px;
 }
-#u430 {
+#u479 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -550,7 +550,7 @@
   width:129px;
   word-wrap:break-word;
 }
-#u431_img {
+#u480_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -558,7 +558,7 @@
   width:132px;
   height:35px;
 }
-#u431 {
+#u480 {
   border-width:0px;
   position:absolute;
   left:133px;
@@ -566,7 +566,7 @@
   width:132px;
   height:35px;
 }
-#u432 {
+#u481 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -574,7 +574,7 @@
   width:128px;
   word-wrap:break-word;
 }
-#u433_div {
+#u482_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -593,7 +593,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u433 {
+#u482 {
   border-width:0px;
   position:absolute;
   left:359px;
@@ -602,7 +602,7 @@
   height:36px;
   font-size:18px;
 }
-#u434 {
+#u483 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -610,7 +610,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u435_div {
+#u484_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -630,7 +630,7 @@
   font-size:16px;
   color:#000000;
 }
-#u435 {
+#u484 {
   border-width:0px;
   position:absolute;
   left:328px;
@@ -643,7 +643,7 @@
   font-size:16px;
   color:#000000;
 }
-#u436 {
+#u485 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -651,7 +651,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u437_div {
+#u486_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -671,7 +671,7 @@
   font-size:16px;
   color:#000000;
 }
-#u437 {
+#u486 {
   border-width:0px;
   position:absolute;
   left:470px;
@@ -684,7 +684,7 @@
   font-size:16px;
   color:#000000;
 }
-#u438 {
+#u487 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -692,7 +692,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u439_div {
+#u488_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -707,9 +707,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:28px;
-  color:#003300;
+  color:#00CC00;
 }
-#u439 {
+#u488 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -717,9 +717,9 @@
   width:242px;
   height:37px;
   font-size:28px;
-  color:#003300;
+  color:#00CC00;
 }
-#u440 {
+#u489 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -727,7 +727,7 @@
   width:242px;
   word-wrap:break-word;
 }
-#u441_div {
+#u490_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -742,9 +742,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:16px;
-  color:#003300;
+  color:#00CC00;
 }
-#u441 {
+#u490 {
   border-width:0px;
   position:absolute;
   left:661px;
@@ -752,9 +752,9 @@
   width:118px;
   height:27px;
   font-size:16px;
-  color:#003300;
+  color:#00CC00;
 }
-#u442 {
+#u491 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -762,7 +762,7 @@
   width:118px;
   word-wrap:break-word;
 }
-#u443_img {
+#u492_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -770,7 +770,7 @@
   width:63px;
   height:2px;
 }
-#u443 {
+#u492 {
   border-width:0px;
   position:absolute;
   left:589px;
@@ -778,7 +778,7 @@
   width:62px;
   height:1px;
 }
-#u444 {
+#u493 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -787,7 +787,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u445_img {
+#u494_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -795,7 +795,7 @@
   width:207px;
   height:2px;
 }
-#u445 {
+#u494 {
   border-width:0px;
   position:absolute;
   left:320px;
@@ -803,7 +803,7 @@
   width:206px;
   height:1px;
 }
-#u446 {
+#u495 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -812,7 +812,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u447 {
+#u496 {
   border-width:0px;
   position:absolute;
   left:734px;
@@ -820,7 +820,7 @@
   width:100px;
   height:30px;
 }
-#u447_menu {
+#u496_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -832,7 +832,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u448 {
+#u497 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -840,7 +840,7 @@
   width:105px;
   height:35px;
 }
-#u449_img {
+#u498_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -848,7 +848,7 @@
   width:100px;
   height:30px;
 }
-#u449 {
+#u498 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -856,7 +856,7 @@
   width:100px;
   height:30px;
 }
-#u450 {
+#u499 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -864,7 +864,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u451 {
+#u500 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -873,7 +873,7 @@
   height:60px;
   visibility:hidden;
 }
-#u451_menu {
+#u500_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -885,7 +885,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u452 {
+#u501 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -893,7 +893,7 @@
   width:105px;
   height:65px;
 }
-#u453_img {
+#u502_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -901,7 +901,7 @@
   width:100px;
   height:30px;
 }
-#u453 {
+#u502 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -909,7 +909,7 @@
   width:100px;
   height:30px;
 }
-#u454 {
+#u503 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -917,7 +917,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u455_img {
+#u504_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -925,7 +925,7 @@
   width:100px;
   height:30px;
 }
-#u455 {
+#u504 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -933,7 +933,7 @@
   width:100px;
   height:30px;
 }
-#u456 {
+#u505 {
   border-width:0px;
   position:absolute;
   left:2px;
