--- a/test6/ui/files/修改密码/styles.css
+++ b/test6/ui/files/修改密码/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u457_div {
+#u506_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u457 {
+#u506 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u458 {
+#u507 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u459_img {
+#u508_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u459 {
+#u508 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u460 {
+#u509 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u461 {
+#u510 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u461_input {
+#u510_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u462 {
+#u511 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u462_menu {
+#u511_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u463 {
+#u512 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u464_img {
+#u513_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u464 {
+#u513 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u465 {
+#u514 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u466_img {
+#u515_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u466 {
+#u515 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u467 {
+#u516 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u468_img {
+#u517_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u468 {
+#u517 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u469 {
+#u518 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u470_img {
+#u519_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u470 {
+#u519 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u471 {
+#u520 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u472_img {
+#u521_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u472 {
+#u521 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u473 {
+#u522 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u474_img {
+#u523_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u474 {
+#u523 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u475 {
+#u524 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u476_img {
+#u525_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u476 {
+#u525 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u477 {
+#u526 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u478_div {
+#u527_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u478 {
+#u527 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u479 {
+#u528 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u480_img {
+#u529_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -334,7 +334,7 @@
   width:648px;
   height:335px;
 }
-#u480 {
+#u529 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -342,7 +342,7 @@
   width:648px;
   height:335px;
 }
-#u481 {
+#u530 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -351,7 +351,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u482 {
+#u531 {
   border-width:0px;
   position:absolute;
   left:347px;
@@ -359,7 +359,7 @@
   width:254px;
   height:66px;
 }
-#u483_img {
+#u532_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -367,7 +367,7 @@
   width:101px;
   height:32px;
 }
-#u483 {
+#u532 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -375,7 +375,7 @@
   width:101px;
   height:32px;
 }
-#u484 {
+#u533 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -383,7 +383,7 @@
   width:97px;
   word-wrap:break-word;
 }
-#u485_img {
+#u534_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -391,7 +391,7 @@
   width:148px;
   height:32px;
 }
-#u485 {
+#u534 {
   border-width:0px;
   position:absolute;
   left:101px;
@@ -399,7 +399,7 @@
   width:148px;
   height:32px;
 }
-#u486 {
+#u535 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -407,7 +407,7 @@
   width:144px;
   word-wrap:break-word;
 }
-#u487_img {
+#u536_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -415,7 +415,7 @@
   width:101px;
   height:29px;
 }
-#u487 {
+#u536 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -423,7 +423,7 @@
   width:101px;
   height:29px;
 }
-#u488 {
+#u537 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -431,7 +431,7 @@
   width:97px;
   word-wrap:break-word;
 }
-#u489_img {
+#u538_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -439,7 +439,7 @@
   width:148px;
   height:29px;
 }
-#u489 {
+#u538 {
   border-width:0px;
   position:absolute;
   left:101px;
@@ -447,7 +447,7 @@
   width:148px;
   height:29px;
 }
-#u490 {
+#u539 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -455,7 +455,7 @@
   width:144px;
   word-wrap:break-word;
 }
-#u491_div {
+#u540_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -474,7 +474,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u491 {
+#u540 {
   border-width:0px;
   position:absolute;
   left:390px;
@@ -483,7 +483,7 @@
   height:36px;
   font-size:18px;
 }
-#u492 {
+#u541 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -491,7 +491,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u493 {
+#u542 {
   border-width:0px;
   position:absolute;
   left:447px;
@@ -499,7 +499,7 @@
   width:149px;
   height:34px;
 }
-#u493_input {
+#u542_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -513,7 +513,7 @@
   color:#000000;
   text-align:left;
 }
-#u494_div {
+#u543_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -533,7 +533,7 @@
   font-size:16px;
   color:#000000;
 }
-#u494 {
+#u543 {
   border-width:0px;
   position:absolute;
   left:366px;
@@ -546,7 +546,7 @@
   font-size:16px;
   color:#000000;
 }
-#u495 {
+#u544 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -554,7 +554,7 @@
   width:71px;
   white-space:nowrap;
 }
-#u496_div {
+#u545_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -574,7 +574,7 @@
   font-size:16px;
   color:#000000;
 }
-#u496 {
+#u545 {
   border-width:0px;
   position:absolute;
   left:366px;
@@ -587,7 +587,7 @@
   font-size:16px;
   color:#000000;
 }
-#u497 {
+#u546 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -595,7 +595,7 @@
   width:71px;
   white-space:nowrap;
 }
-#u498 {
+#u547 {
   border-width:0px;
   position:absolute;
   left:447px;
@@ -603,7 +603,7 @@
   width:149px;
   height:34px;
 }
-#u498_input {
+#u547_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -617,7 +617,7 @@
   color:#000000;
   text-align:left;
 }
-#u499_div {
+#u548_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -637,7 +637,7 @@
   font-size:16px;
   color:#000000;
 }
-#u499 {
+#u548 {
   border-width:0px;
   position:absolute;
   left:347px;
@@ -650,7 +650,7 @@
   font-size:16px;
   color:#000000;
 }
-#u500 {
+#u549 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -658,7 +658,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u501_div {
+#u550_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -678,7 +678,7 @@
   font-size:16px;
   color:#000000;
 }
-#u501 {
+#u550 {
   border-width:0px;
   position:absolute;
   left:468px;
@@ -691,7 +691,7 @@
   font-size:16px;
   color:#000000;
 }
-#u502 {
+#u551 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -699,7 +699,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u503_div {
+#u552_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -714,9 +714,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:28px;
-  color:#003300;
+  color:#00CC00;
 }
-#u503 {
+#u552 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -724,9 +724,9 @@
   width:242px;
   height:37px;
   font-size:28px;
-  color:#003300;
+  color:#00CC00;
 }
-#u504 {
+#u553 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -734,7 +734,7 @@
   width:242px;
   word-wrap:break-word;
 }
-#u505_div {
+#u554_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -749,9 +749,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:16px;
-  color:#003300;
+  color:#00CC00;
 }
-#u505 {
+#u554 {
   border-width:0px;
   position:absolute;
   left:668px;
@@ -759,9 +759,9 @@
   width:118px;
   height:27px;
   font-size:16px;
-  color:#003300;
+  color:#00CC00;
 }
-#u506 {
+#u555 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -769,7 +769,7 @@
   width:118px;
   word-wrap:break-word;
 }
-#u507_img {
+#u556_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -777,7 +777,7 @@
   width:63px;
   height:2px;
 }
-#u507 {
+#u556 {
   border-width:0px;
   position:absolute;
   left:606px;
@@ -785,7 +785,7 @@
   width:62px;
   height:1px;
 }
-#u508 {
+#u557 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -794,7 +794,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u509 {
+#u558 {
   border-width:0px;
   position:absolute;
   left:734px;
@@ -802,7 +802,7 @@
   width:100px;
   height:30px;
 }
-#u509_menu {
+#u558_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -814,7 +814,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u510 {
+#u559 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -822,7 +822,7 @@
   width:105px;
   height:35px;
 }
-#u511_img {
+#u560_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -830,7 +830,7 @@
   width:100px;
   height:30px;
 }
-#u511 {
+#u560 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -838,7 +838,7 @@
   width:100px;
   height:30px;
 }
-#u512 {
+#u561 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -846,7 +846,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u513 {
+#u562 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -855,7 +855,7 @@
   height:60px;
   visibility:hidden;
 }
-#u513_menu {
+#u562_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -867,7 +867,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u514 {
+#u563 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -875,7 +875,7 @@
   width:105px;
   height:65px;
 }
-#u515_img {
+#u564_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -883,7 +883,7 @@
   width:100px;
   height:30px;
 }
-#u515 {
+#u564 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -891,7 +891,7 @@
   width:100px;
   height:30px;
 }
-#u516 {
+#u565 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -899,7 +899,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u517_img {
+#u566_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -907,7 +907,7 @@
   width:100px;
   height:30px;
 }
-#u517 {
+#u566 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -915,7 +915,7 @@
   width:100px;
   height:30px;
 }
-#u518 {
+#u567 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -923,7 +923,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u519_img {
+#u568_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -931,7 +931,7 @@
   width:207px;
   height:2px;
 }
-#u519 {
+#u568 {
   border-width:0px;
   position:absolute;
   left:320px;
@@ -939,7 +939,7 @@
   width:206px;
   height:1px;
 }
-#u520 {
+#u569 {
   border-width:0px;
   position:absolute;
   left:2px;
