--- a/test6/ui/files/安全退出/styles.css
+++ b/test6/ui/files/安全退出/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u521_div {
+#u570_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u521 {
+#u570 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u522 {
+#u571 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u523_img {
+#u572_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u523 {
+#u572 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u524 {
+#u573 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u525 {
+#u574 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u525_input {
+#u574_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u526 {
+#u575 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u526_menu {
+#u575_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u527 {
+#u576 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u528_img {
+#u577_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u528 {
+#u577 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u529 {
+#u578 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u530_img {
+#u579_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u530 {
+#u579 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u531 {
+#u580 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u532_img {
+#u581_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u532 {
+#u581 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u533 {
+#u582 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u534_img {
+#u583_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u534 {
+#u583 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u535 {
+#u584 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u536_img {
+#u585_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u536 {
+#u585 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u537 {
+#u586 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u538_img {
+#u587_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u538 {
+#u587 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u539 {
+#u588 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u540_img {
+#u589_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u540 {
+#u589 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u541 {
+#u590 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u542_div {
+#u591_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u542 {
+#u591 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u543 {
+#u592 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u544_img {
+#u593_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -334,7 +334,7 @@
   width:394px;
   height:329px;
 }
-#u544 {
+#u593 {
   border-width:0px;
   position:absolute;
   left:273px;
@@ -342,7 +342,7 @@
   width:394px;
   height:329px;
 }
-#u545 {
+#u594 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -351,7 +351,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u546_div {
+#u595_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -370,7 +370,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u546 {
+#u595 {
   border-width:0px;
   position:absolute;
   left:396px;
@@ -379,7 +379,7 @@
   height:36px;
   font-size:18px;
 }
-#u547 {
+#u596 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -387,7 +387,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u548_div {
+#u597_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -407,7 +407,7 @@
   font-size:16px;
   color:#000000;
 }
-#u548 {
+#u597 {
   border-width:0px;
   position:absolute;
   left:367px;
@@ -420,7 +420,7 @@
   font-size:16px;
   color:#000000;
 }
-#u549 {
+#u598 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -428,7 +428,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u550_div {
+#u599_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -448,7 +448,7 @@
   font-size:16px;
   color:#000000;
 }
-#u550 {
+#u599 {
   border-width:0px;
   position:absolute;
   left:482px;
@@ -461,7 +461,7 @@
   font-size:16px;
   color:#000000;
 }
-#u551 {
+#u600 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -469,7 +469,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u552_div {
+#u601_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -485,7 +485,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u552 {
+#u601 {
   border-width:0px;
   position:absolute;
   left:420px;
@@ -494,7 +494,7 @@
   height:27px;
   font-size:18px;
 }
-#u553 {
+#u602 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -502,7 +502,7 @@
   width:143px;
   word-wrap:break-word;
 }
-#u554_div {
+#u603_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -517,9 +517,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:28px;
-  color:#003300;
+  color:#00CC00;
 }
-#u554 {
+#u603 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -527,9 +527,9 @@
   width:242px;
   height:37px;
   font-size:28px;
-  color:#003300;
+  color:#00CC00;
 }
-#u555 {
+#u604 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -537,7 +537,7 @@
   width:242px;
   word-wrap:break-word;
 }
-#u556 {
+#u605 {
   border-width:0px;
   position:absolute;
   left:734px;
@@ -545,7 +545,7 @@
   width:100px;
   height:30px;
 }
-#u556_menu {
+#u605_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -557,7 +557,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u557 {
+#u606 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -565,7 +565,7 @@
   width:105px;
   height:35px;
 }
-#u558_img {
+#u607_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -573,7 +573,7 @@
   width:100px;
   height:30px;
 }
-#u558 {
+#u607 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -581,7 +581,7 @@
   width:100px;
   height:30px;
 }
-#u559 {
+#u608 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -589,7 +589,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u560 {
+#u609 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -598,7 +598,7 @@
   height:60px;
   visibility:hidden;
 }
-#u560_menu {
+#u609_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -610,7 +610,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u561 {
+#u610 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -618,7 +618,7 @@
   width:105px;
   height:65px;
 }
-#u562_img {
+#u611_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -626,7 +626,7 @@
   width:100px;
   height:30px;
 }
-#u562 {
+#u611 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -634,7 +634,7 @@
   width:100px;
   height:30px;
 }
-#u563 {
+#u612 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -642,7 +642,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u564_img {
+#u613_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -650,7 +650,7 @@
   width:100px;
   height:30px;
 }
-#u564 {
+#u613 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -658,7 +658,7 @@
   width:100px;
   height:30px;
 }
-#u565 {
+#u614 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -666,7 +666,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u566_img {
+#u615_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -674,7 +674,7 @@
   width:207px;
   height:2px;
 }
-#u566 {
+#u615 {
   border-width:0px;
   position:absolute;
   left:310px;
@@ -682,7 +682,7 @@
   width:206px;
   height:1px;
 }
-#u567 {
+#u616 {
   border-width:0px;
   position:absolute;
   left:2px;
